<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraActivity">

    <com.otaliastudios.cameraview.CameraView
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        app:cameraEngine="camera2"
        app:cameraExperimental="true"
        app:cameraPlaySounds="false"
        app:cameraAudio="off"
        app:cameraRequestPermissions="true" />

    <ImageButton
        android:id="@+id/camera_toggle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@color/transparent"
        android:contentDescription="@string/camera_toggle"
        app:srcCompat="@drawable/camera_toggle"
        tools:ignore="InefficientWeight" />

    <LinearLayout
        android:id="@+id/operator"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:background="@color/transparent"
        android:gravity="center"
        android:showDividers="middle"
        android:divider="@drawable/divider_line"
        android:clickable="true"
        android:orientation="horizontal"
        android:focusable="true">

        <ImageButton
            android:id="@+id/camera_close"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:contentDescription="@string/camera_close"
            app:srcCompat="@drawable/camera_close"
            tools:ignore="InefficientWeight" />

        <ImageButton
            android:id="@+id/capture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@color/transparent"
            android:contentDescription="@string/start_capture"
            app:srcCompat="@drawable/capture"
            tools:ignore="InefficientWeight" />

        <ImageButton
            android:id="@+id/camera_placeholder"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:background="@color/transparent"
            android:visibility="invisible"
            android:layout_gravity="center"
            android:contentDescription="@string/placeholder"
            app:srcCompat="@drawable/camera_close"
            tools:ignore="InefficientWeight" />
    </LinearLayout>
</RelativeLayout>