<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/photo_editor_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ja.burhanrashid52.photoeditor.PhotoEditorView
        android:id="@+id/photoEditorView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">
    </ja.burhanrashid52.photoeditor.PhotoEditorView>

    <!-- 遮盖层 -->
    <RelativeLayout
        android:id="@+id/mask_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        >

        <!-- 顶部返回操作区 -->
        <RelativeLayout
            android:id="@+id/back_wrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shadow_top">
            <ImageButton
                android:id="@+id/editor_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:background="@color/transparent"
                android:contentDescription="@string/editor_back"
                android:src="@drawable/editor_back"
                android:clickable="true"
                android:focusable="true"
                tools:ignore="InefficientWeight" />
        </RelativeLayout>

        <!-- 底部操作区 -->
        <RelativeLayout
            android:id="@+id/operator"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentBottom="true"
            android:paddingBottom="20dp"
            android:background="@drawable/shadow_bottom"
            >

            <LinearLayout
                android:id="@+id/tools_wrap"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_alignParentTop="true"
                android:paddingHorizontal="16dp"
                android:visibility="gone"
                android:layout_above="@id/painting">
                <LinearLayout
                    android:id="@+id/retreat_wrap"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingEnd="3dp"
                    android:gravity="end"
                    tools:ignore="RtlSymmetry">
                    <ImageButton
                        android:id="@+id/editor_retreat"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="bottom"
                        android:background="@color/transparent"
                        android:contentDescription="@string/editor_retreat"
                        android:src="@drawable/editor_retreat"
                        android:clickable="true"
                        android:focusable="true"
                        tools:ignore="InefficientWeight" />

                    <ImageButton
                        android:id="@+id/editor_redo"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="bottom"
                        android:background="@color/transparent"
                        android:contentDescription="@string/editor_redo"
                        android:src="@drawable/editor_redo"
                        android:clickable="true"
                        android:focusable="true"
                        tools:ignore="InefficientWeight" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/graffiti_color"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                </LinearLayout>
            </LinearLayout>

            <!-- 左侧画图工具 -->
            <LinearLayout
                android:id="@+id/painting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                tools:ignore="RtlSymmetry">

                <ImageButton
                    android:id="@+id/editor_graffiti"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:contentDescription="@string/editor_graffiti"
                    android:src="@drawable/editor_graffiti"
                    android:clickable="true"
                    android:focusable="true"
                    tools:ignore="InefficientWeight" />

                <ImageButton
                    android:id="@+id/editor_emoji"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_gravity="bottom"
                    android:background="@color/transparent"
                    android:contentDescription="@string/editor_emoji"
                    android:src="@drawable/editor_emoji"
                    android:clickable="true"
                    android:focusable="true"
                    tools:ignore="InefficientWeight" />

                <ImageButton
                    android:id="@+id/editor_text"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_gravity="bottom"
                    android:background="@color/transparent"
                    android:contentDescription="@string/editor_text"
                    android:src="@drawable/editor_text"
                    android:clickable="true"
                    android:focusable="true"
                    tools:ignore="InefficientWeight" />

                <ImageButton
                    android:id="@+id/editor_cut"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_gravity="bottom"
                    android:background="@color/transparent"
                    android:contentDescription="@string/editor_cut"
                    android:src="@drawable/editor_cut"
                    android:clickable="true"
                    android:focusable="true"
                    tools:ignore="InefficientWeight" />
            </LinearLayout>

            <!-- 右侧确认按钮 -->
            <LinearLayout
                android:id="@+id/complete_wrap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:paddingEnd="10dp"
                android:gravity="end"
                android:layout_toEndOf="@+id/painting"
                tools:ignore="RtlSymmetry">

                <Button
                    android:id="@+id/editor_complete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:backgroundTint="@color/primary"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:paddingHorizontal="18dp"
                    android:paddingVertical="12dp"
                    android:text="@string/editor_complete"
                    android:textColor="@color/white"
                    android:clickable="true"
                    android:focusable="true"
                    android:textSize="16sp" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/text_editor_mask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        >
        <LinearLayout
            android:id="@+id/text_editor_wrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingHorizontal="10dp"
            style="?android:attr/borderlessButtonStyle">
            <Button
                android:id="@+id/text_editor_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="bottom"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingHorizontal="18dp"
                android:paddingVertical="12dp"
                android:text="@string/editor_cancel"
                android:textColor="@color/white"
                android:clickable="true"
                android:focusable="true"
                android:textSize="16sp"
                style="?android:attr/buttonBarButtonStyle"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:visibility="invisible"
                />

            <Button
                android:id="@+id/text_editor_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="bottom"
                android:backgroundTint="@color/primary"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingHorizontal="18dp"
                android:paddingVertical="12dp"
                android:text="@string/editor_complete"
                android:textColor="@color/white"
                android:clickable="true"
                android:focusable="true"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/editor_edit_wrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_below="@+id/text_editor_wrap"
            android:layout_above="@+id/text_graffiti_color"
            android:background="@color/transparent"
            >
            <EditText
                android:id="@+id/editor_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:autofillHints="name"
                android:hint="@string/add_image_text"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:background="@null"
                android:clickable="true"
                android:focusable="true"
                android:inputType="textMultiLine">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/text_graffiti_color"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>